C1760763312189223/result_output.txt
File "/app/code_file.py", line 1
while(true)
^
SyntaxError: expected ':'